--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 </div>
 </section>
 <footer>
-     <div
+     <div>
+        <a href="https://www.instagram.com/"><i>class= "fa fa-instagram"></i></a> <!-- links to the social platforms-->
+     </div>
 </footer>
 </body>
 </html>
