--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
      <div>
         <a href="https://www.instagram.com/"><i>class= "fa fa-instagram"></i></a> <!-- links to the social platforms-->
      </div>
+     <div>
+        <p>Copyright &copy; 2025, Sotera Oy</p> <!-- Sivuston alakulmassa luotettavuutta lisäämään copyright, tiedetään olevan ajantasalla-->
+     </div>
+     <div>
+        <p><a href="mailto:info@sotera.fi"></a></p>
+     </div>
 </footer>
 </body>
 </html>
