--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>Copyright &copy; 2025, Sotera Oy</p> <!-- Sivuston alakulmassa luotettavuutta lisäämään copyright, tiedetään olevan ajantasalla-->
      </div>
      <div>
-        <p><a href="mailto:info@sotera.fi"></a></p>
+        <p><a href="mailto:info@sotera.fi"></a>info@sotera.fi</p>
      </div>
 </footer>
 </body>
