--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>naiset matkassa</title>
-    <link rel="stylesheet" href="joku css tiedosto"
+    <title>Soteria</title>
+    <link rel="stylesheet" href="sotera.css"
 </head>
 <body>
     <header id="etusivu"
     <nav>
-        <a href="palvelut.html" id="valittu">Palvelut</a>
-        <a href="yhteistiedot.html" >yhteistiedot</a> <!--valilehdet palveluihin seka yhteystietoihin-->
+        <a href="index.html" id="valittu" >Etusivu</a>
+        <a href="palvelut.html" >Palvelut</a>
+        <a href="yhteystiedot.html" >Yhteistiedot</a>
+       <!--valilehdet palveluihin seka yhteystietoihin-->
     </nav>
     <h1 id="slogan">Naiset matkassa turvallisin mielin</h1>
     <a href="yhteistiedot.html" class="toimintakehote">Kuule lisää!</a>
