--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Soteria</title>
     <link rel="stylesheet" href="sotera.css"
 </head>
-<body>
-    <header id="etusivu"
+<body id="alisivut">
+    <header 
     <nav>
         <a href="index.html" id="valittu" >Etusivu</a>
         <a href="palvelut.html" >Palvelut</a>
