--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yhteystiedot</title>
+    <title>Keitä olemme</title>
 </head>
 <body>
-    
+    <header>
+    <nav>
+        <a href="index.html"  >Etusivu</a>
+        <a href="palvelut.html" >Palvelut</a>
+        <a href="yhteystiedot.html" id="valittu">Yhteistiedot</a>
+        <h1>Jos tarvitset tukeamme</h1>
+    </header>
+
+    <div class="alisivu-sisalto">   
+        <div style="overflow-x: auto" class="esittely">
+           <table>
+              <tr>
+                 <th colspan="2">Päivisin</th>
+                 <th>Iltaisin</th>
+              </tr>
+              <tr>
+                 <td>Ma-pe</td><td>7-18</td><td>Pe klo 22 asti</td>
+              </tr>
+              <tr>
+                 <td>La-su</td><td>12-19</td><td>La klo 22 asti</td>
+              </tr>
+           </table>
+           <table>
+              <tr>
+                 <th>Aukioloaikoina</th>
+              </tr>
+              <tr>
+                 <td>0200-123456</td>
+              </tr>
+              <tr>
+                 <td><a href="mailto:info@ticocafe.fi">info@ticocafe.fi</a>
+              </tr>
+              <tr>
+                 <td>&nbsp;</td>
+              </tr>
+              <tr>
+                 <td>Ratapihantie 13, 00520 Helsinki</td>
+              </tr>
+           </table>
+        </div>
+        <div>
+           <iframe id=kartta src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3965.4723381632066!2d24.933814!3d60.201649!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469208606a60874b%3A0x50a651a72fbb180b!2sHaaga-Helia%20ammattikorkeakoulu!5e0!3m2!1sfi!2sfi!4v1677932565062!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+     </div>
+     <h2>Matkassasi mukana</h2>
 </body>
 </html>
