--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keitä olemme</title>
+    <link rel="stylesheet" href="sotera.css">
 </head>
 <body>
     <header>
@@ -11,44 +12,46 @@
         <a href="index.html"  >Etusivu</a>
         <a href="palvelut.html" >Palvelut</a>
         <a href="yhteystiedot.html" id="valittu">Yhteistiedot</a>
-        <h1>Jos tarvitset tukeamme</h1>
+        <h1>Ei huolta. Olemme apunasi.</h1>
     </header>
 
     <div class="alisivu-sisalto">   
         <div style="overflow-x: auto" class="esittely">
            <table>
               <tr>
-                 <th colspan="2">Päivisin</th>
-                 <th>Iltaisin</th>
+                 <th colspan="2">Viikonpäivinä</th>
               </tr>
               <tr>
-                 <td>Ma-pe</td><td>7-18</td><td>Pe klo 22 asti</td>
+                 <td>Ma-Ke</td><td> 8-16</td>
               </tr>
               <tr>
-                 <td>La-su</td><td>12-19</td><td>La klo 22 asti</td>
+                <td>To-Pe</td><td> 9-14</td>
               </tr>
+              <table>
+              <tr>
+                <br>Tapaamisia voidaan sopia myös joustavasti! 
+                </tr>
            </table>
            <table>
               <tr>
                  <th>Aukioloaikoina</th>
               </tr>
               <tr>
-                 <td>0200-123456</td>
+                 <td>puh: 0300-782343 </td>
               </tr>
               <tr>
-                 <td><a href="mailto:info@ticocafe.fi">info@ticocafe.fi</a>
+                 <td><a href="mailto:info@soteria.fi">info@soteria.fi</a>
               </tr>
               <tr>
                  <td>&nbsp;</td>
               </tr>
               <tr>
-                 <td>Ratapihantie 13, 00520 Helsinki</td>
+                 <td>Kaasutehtaankatu 20, 00540 Helsinki</td>
               </tr>
            </table>
         </div>
         <div>
-           <iframe id=kartta src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3965.4723381632066!2d24.933814!3d60.201649!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469208606a60874b%3A0x50a651a72fbb180b!2sHaaga-Helia%20ammattikorkeakoulu!5e0!3m2!1sfi!2sfi!4v1677932565062!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+           <iframe id=kartta <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.6588958747489!2d24.971980176034965!3d60.18637804212683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097b523e49c9%3A0x1a90b78171aa5ce6!2sKaasutehtaankatu%2020%2C%2000540%20Helsinki!5e0!3m2!1sfi!2sfi!4v1740641591949!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
      </div>
      <h2>Matkassasi mukana</h2>
 </body>
