--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
 <div class="grid-kuva"
 <figure>
-    <img class="kuva" src="verkkosivu/space.jpg" alt="Maapallo avaruudesa katsottuna">
+    <img class="kuva" src="" alt="">
   <!-- kuva, jossa kerrotaan alt tekstin avulla sisältöä-->
 
 </figure>
@@ -50,13 +50,10 @@
 </section>
 <footer>
      <div>
-        <a href="https://www.instagram.com/"><i>class= "fa fa-instagram"></i></a> <!-- links to the social platforms-->
+        <p>Copyright &copy; 2025, Soteria Oy</p> <!-- Sivuston alakulmassa luotettavuutta lisäämään copyright, tiedetään olevan ajantasalla-->
      </div>
      <div>
-        <p>Copyright &copy; 2025, Sotera Oy</p> <!-- Sivuston alakulmassa luotettavuutta lisäämään copyright, tiedetään olevan ajantasalla-->
-     </div>
-     <div>
-        <p><a href="mailto:info@sotera.fi"></a>info@sotera.fi</p>
+        <p><a href="mailto:info@soteria.fi"></a>info@soteria.fi</p>
      </div>
 </footer>
 </body>
