--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -13,10 +13,13 @@
         <a href="palvelut.html" >Palvelut</a>
         <a href="yhteystiedot.html" id="valittu">Yhteistiedot</a>
         <h1>Ei huolta. Olemme apunasi.</h1>
+        <a href="" class="toimintakehote"> Löydä elämäsi reissu!</a>
+      </nav>
+
     </header>
 
     <div class="alisivu-sisalto">   
-        <div style="overflow-x: auto" class="esittely">
+        <div style="overflow-x: auto" class="esittely"> <!--Liikkuva bar, jos teksti ei mahdo kokonaan näytölle-->
            <table>
               <tr>
                  <th colspan="2">Viikonpäivinä</th>
@@ -24,8 +27,8 @@
               <tr>
                  <td>Ma-Ke</td><td> 8-16</td>
               </tr>
-              <tr>
-                <td>To-Pe</td><td> 9-14</td>
+              <tr> <!--table row eli rivitys-->
+                <td>To-Pe</td><td> 9-14</td> <!--table data eli sisältö tekstiä (th on taas table headline otsikoille)-->
               </tr>
               <table>
               <tr>
