--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p> Naiset matkassa auttaa sinua tuntemaan olosi turvalliseksi myös yksin tarjoamalla tukea sekä turvaa matkallasi!</p> <!--kerrotaan esittely kyseisestä palvelusta. A hook.-->
     </nav>
 <section class="grid-container" id="paasivu">
-</div
-<div> class="grid-teksti">
+
+<div class="grid-teksti"> 
 
 <h2>Turvallisempaa ympäristöä yksin matkustaville naisille</h2>
  <p> Yhteistyömme avulla pystyt kommunikoimaan muiden yksinmatkustavien kanssa sekä verkostoitumaan.</p>
@@ -35,6 +35,7 @@
     jjdohhgff ks. oishfffjfg
     nsjkjgd ijsgj osuyef jg od skkdg. jsjksbmdg.</p>
 </div>
+</div
 <div class="grid-kuva"
 <figure>
     <img class="kuva" src="" alt="">
@@ -42,7 +43,7 @@
 
 </figure>
 </div>
-<div class="grid teksti2">
+<div class="grid-teksti2">
  <h2>Kuin olisit kotonasi</h2>
     <p> Turvallista oloa sekä yhteishenkeä jksdi idgikd. jidijsghs </p>
     <p> jgddjksk skd kkd ok jsgj ksks dfshyue jsfbjoa osin sbdh.</p>
