--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -13,7 +13,7 @@
         <a href="palvelut.html" >Palvelut</a>
         <a href="yhteystiedot.html" id="valittu">Yhteistiedot</a>
         <h1>Ei huolta. Olemme apunasi.</h1>
-        <a href="" class="toimintakehote"> Löydä elämäsi reissu!</a>
+        <a href="laitetaa tähä palvelut" class="toimintakehote"> Löydä elämäsi reissu!</a>
       </nav>
 
     </header>
