--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -52,10 +52,31 @@
                  <td>Kaasutehtaankatu 20, 00540 Helsinki</td>
               </tr>
            </table>
-        </div>
         <div>
-           <iframe id=kartta <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.6588958747489!2d24.971980176034965!3d60.18637804212683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097b523e49c9%3A0x1a90b78171aa5ce6!2sKaasutehtaankatu%2020%2C%2000540%20Helsinki!5e0!3m2!1sfi!2sfi!4v1740641591949!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           <iframe id=kartta src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.6588958747489!2d24.971980176034965!3d60.18637804212683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097b523e49c9%3A0x1a90b78171aa5ce6!2sKaasutehtaankatu%2020%2C%2000540%20Helsinki!5e0!3m2!1sfi!2sfi!4v1740641591949!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
      </div>
-     <h2>Matkassasi mukana</h2>
+
+     <h2 id="h2yht">Matkassasi mukana</h2>
+     <figure>
+      <img class="kuva" src="./kuvat/Kuva3.png" alt="Picture of a staff member">
+      <figcaption>CEO, Maria Kuutila</figcaption>
+      <p> Puh.: 0300-9480</p>
+      <p>S-posti: mariakuutila@gmail.com</p>
+   </figure>
+   <figure>
+      <img class="kuva" src="./kuvat/Kuva1.png" alt="Picture of a staff member">
+      <figcaption>COC, Helly Viima</figcaption>
+      <p>Puh. : 0300-8623</p>
+      <p>s-posti:hellyviima@gmail.com</p>
+   </figure>
+  
+   <figure>
+      <img class="kuva" src="./kuvat/Kuva2.png" alt="Picture of a staff member">
+      <figcaption>Matkaopas, Liisa Kuutila</figcaption>
+      <p>Puh. : 0300-3458</p>
+      <p>s-posti:liisakuutila@gmail.com</p>
+   </figure>
+</div>
+
 </body>
 </html>
