--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="googlebot" content="noindex">
     <title>Soteria</title>
     <link rel="stylesheet" href="sotera.css"
 </head>
-<body id="alisivut">
-    <header 
+<body >
+    <header id="etusivu">
     <nav>
         <a href="index.html" id="valittu" >Etusivu</a>
         <a href="palvelut.html" >Palvelut</a>
         <a href="yhteystiedot.html" >Yhteistiedot</a>
-       <!--valilehdet palveluihin seka yhteystietoihin-->
     </nav>
+     <!--valilehdet palveluihin seka yhteystietoihin-->
     <h1 id="slogan">Naiset matkassa turvallisin mielin</h1>
     <a href="yhteistiedot.html" class="toimintakehote">Kuule lisää!</a>
 </header>
 <div class="sisalto">
      <p class="esittely">Oletko väsynyt odottamaan muiden aikatauluja lähtiessäsi matkalle, mutta sinua pelottaa myös lähteä yksin? </p>
         <p> Naiset matkassa auttaa sinua tuntemaan olosi turvalliseksi myös yksin tarjoamalla tukea sekä turvaa matkallasi!</p> <!--kerrotaan esittely kyseisestä palvelusta. A hook.-->
-    </nav>
 <section class="grid-container" id="paasivu">
     </div
 
@@ -38,13 +38,10 @@
 
 </div>
 
-
-
-<div class="grid-kuva"
+<div class="grid-kuva">
 <figure>
-    <img class="kuva" src="" alt="">
+    <img class="indexkuva" src="./kuvat/pictureforindexx.jpeg" alt="Kuva rannasta, jonka vedessä uiskentelee kilpikonnia">
   <!-- kuva, jossa kerrotaan alt tekstin avulla sisältöä-->
-
 </figure>
 </div>
 <div class="grid-teksti2">
@@ -58,8 +55,9 @@
         <p>Copyright &copy; 2025, Soteria Oy</p> <!-- Sivuston alakulmassa luotettavuutta lisäämään copyright, tiedetään olevan ajantasalla-->
      </div>
      <div>
-        <p><a href="mailto:info@soteria.fi"></a>info@soteria.fi</p>
+        <p><a href="mailto:info@soteria.fi">info@soteria.fi</a></p>
      </div>
 </footer>
+
 </body>
 </html>
