--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="googlebot" content="noindex">
     <title>Soteria</title>
-    <link rel="stylesheet" href="sotera.css"
+    <link rel="stylesheet" href="soteria.css"
 </head>
 <body >
     <header id="etusivu">
