--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keitä olemme</title>
-    <link rel="stylesheet" href="sotera.css">
+    <link rel="stylesheet" href="soteria.css">
 </head>
 <body>
     <header>
