--- a/palvelut.html
+++ b/palvelut.html
@@ -6,19 +6,24 @@
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
     <title>Elämäsi matkalle turvallisesti</title>
-    <link rel= "stylesheet" href="soteria.css">
+    <link rel="stylesheet" href="soteria.css">
 </head>
 <body id="alisivut">
-    <header>
+    <div class="header">
         <nav>
             <a href="index.html">Etusivu </a>
             <a href="palvelut.html" id="valittu">Palvelut</a>
             <a href="yhteystiedot.html">Yhteystiedot</a>
         </nav>
-        
+    </div>
+
+    <div class="sisalto">
         <h1>Unohtumaton matkasi alkaa tästä</h1>
-            <a href="yhteystiedot.html" class="toimintakehote">Olemme apunasi</a>
-    </header>
+        <a href="yhteystiedot.html" class="toimintakehote">Olemme apunasi</a>
+
+    </div>
     
+    <div class="footer"
+
 </body>
 </html>
