service for you

--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keitä olemme</title>
+    <meta name="robots" content="noindex">
+    <meta name="googlebot" content="noindex">
+    <title>Naisilta naisille</title>
     <link rel="stylesheet" href="soteria.css">
 </head>
 <body>
@@ -11,7 +13,7 @@
     <nav>
         <a href="index.html"  >Etusivu</a>
         <a href="palvelut.html" >Palvelut</a>
-        <a href="yhteystiedot.html" id="valittu">Yhteistiedot</a>
+        <a href="yhteystiedot.html" id="valittu">Yhteystiedot</a>
         <h1>Ei huolta. Olemme apunasi.</h1>
         <a href="laitetaa tähä palvelut" class="toimintakehote"> Löydä elämäsi reissu!</a>
       </nav>
