--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
-    <title>Soteria</title>
-    <link rel="stylesheet" href="soteria.css"
+    <title>Soteria - Turvanasi</title>
+    <link rel="stylesheet" href="soteria.css">
 </head>
 <body >
     <header id="etusivu">
     <nav>
         <a href="index.html" id="valittu" >Etusivu</a>
         <a href="palvelut.html" >Palvelut</a>
-        <a href="yhteystiedot.html" >Yhteistiedot</a>
+        <a href="yhteystiedot.html" >Yhteystiedot</a>
     </nav>
-     <!--valilehdet palveluihin seka yhteystietoihin-->
+     <!--valilehdet palveluihin sekä yhteystietoihin-->
     <h1 id="slogan">Naiset matkassa turvallisin mielin</h1>
     <a href="yhteistiedot.html" class="toimintakehote">Kuule lisää!</a>
+    </header>
 
 <div class="sisalto">
      <p class="esittely">Oletko väsynyt odottamaan muiden aikatauluja lähtiessäsi matkalle, mutta sinua pelottaa myös lähteä yksin? </p>
         <p> Naiset matkassa auttaa sinua tuntemaan olosi turvalliseksi myös yksin tarjoamalla tukea sekä turvaa matkallasi!</p> <!--kerrotaan esittely kyseisestä palvelusta. A hook.-->
-</header>
-
-
+</div>
 <div class="grid-teksti">
 
  <h2>Turvallisempaa ympäristöä yksin matkustaville naisille</h2>
@@ -35,7 +35,6 @@
  <p> Tärkeänä yhteistyön lähteenämme toimii kodgjohs hiudhid
     jjdohhgff ks. oishfffjfg
     nsjkjgd ijsgj osuyef jg od skkdg. jsjksbmdg.</p>
-
 </div>
 
 <div class="grid-kuva">
@@ -49,7 +48,7 @@
     <p> Turvallista oloa sekä yhteishenkeä jksdi idgikd. jidijsghs </p>
     <p> jgddjksk skd kkd ok jsgj ksks dfshyue jsfbjoa osin sbdh.</p>
 </div>
-</section>
+
 <footer>
      <div>
         <p>Copyright &copy; 2025, Soteria Oy</p> <!-- Sivuston alakulmassa luotettavuutta lisäämään copyright, tiedetään olevan ajantasalla-->
