--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
 </div>
 
 <footer>
+        <div class="icons">  <!--Src luo kuvan linkille-->
+        <a href = "https://www.facebook.com/">
+            <img src="./someicons/facebook.png" height="35px" width="35px">
+         </a>
+         <a href="https://www.instagram.com/">
+            <img src ="someicons/instagram.png"height="35px" width="35px">
+         </a>
+         <a href="https://www.tiktok.com/">
+            <img src ="./someicons/tiktok.png"height="35px" width="35px">
+         </a>
+    </div>
      <div>
         <p>Copyright &copy; 2025, Soteria Oy</p> <!-- Sivuston alakulmassa luotettavuutta lisäämään copyright, tiedetään olevan ajantasalla-->
      </div>
