--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -35,6 +35,7 @@
               <table>
               <tr>
                 <br>Tapaamisia voidaan sopia myös joustavasti! 
+                  <br> Saat meihin myös yhteyden Tiktokin, Facebookin sekä Instagramin kautta:)
                 </tr>
            </table>
            <table>
