--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -20,9 +20,13 @@
 
     </header>
 
-    <div class="alisivu-sisalto">   
+<div class="alisivu-sisalto">   
         <div style="overflow-x: auto" class="esittely"> <!--Liikkuva bar, jos teksti ei mahdo kokonaan näytölle-->
            <table>
+            <div>
+               <iframe id=kartta src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.6588958747489!2d24.971980176034965!3d60.18637804212683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097b523e49c9%3A0x1a90b78171aa5ce6!2sKaasutehtaankatu%2020%2C%2000540%20Helsinki!5e0!3m2!1sfi!2sfi!4v1740641591949!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+             </div>
+             <p>Näin tavoitat meidät</p>
               <tr>
                  <th colspan="2">Viikonpäivinä</th>
               </tr>
@@ -34,9 +38,10 @@
               </tr>
               <table>
               <tr>
-                <br>Tapaamisia voidaan sopia myös joustavasti! 
-                  <br> Saat meihin myös yhteyden Tiktokin, Facebookin sekä Instagramin kautta:)
+                <br>  Tapaamisia voidaan sopia myös joustavasti! 
+                <br>  Saat meihin yhteyden myös Tiktokin, Facebookin sekä Instagramin kautta.
                 </tr>
+           
            </table>
            <table>
               <tr>
