--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -9,15 +9,16 @@
     <link rel="stylesheet" href="soteria.css">
 </head>
 <body>
-    <header>
-    <nav>
-        <a href="index.html"  >Etusivu</a>
-        <a href="palvelut.html" >Palvelut</a>
-        <a href="yhteystiedot.html" id="valittu">Yhteystiedot</a>
-        <h1>Ei huolta. Olemme apunasi.</h1>
-        <a href="laitetaa tähä palvelut" class="toimintakehote"> Löydä elämäsi reissu!</a>
+    <header id = "soteria">
+      <nav>
+         <ul class="valikko">
+            <li><a href="index.html" id="valittu">Etusivu</a></li>
+            <li><a href="palvelut.html">Palvelut</a></li>
+            <li><a href="yhteystiedot.html">Yhteystiedot</a></li>
+         </ul>
       </nav>
-
+      <h1>Ei huolta. Olemme apunasi.</h1>
+      <a href="palvelut.html" class="toimintakehote"> Löydä elämäsi reissu!</a>
     </header>
 
     <div class="alisivu-sisalto">   
@@ -27,14 +28,15 @@
                  <th colspan="2">Viikonpäivinä</th>
               </tr>
               <tr>
-                 <td>Ma-Ke</td><td> 8-16</td>
+                 <td>ma-ke</td><td> 8-16</td>
               </tr>
               <tr> <!--table row eli rivitys-->
-                <td>To-Pe</td><td> 9-14</td> <!--table data eli sisältö tekstiä (th on taas table headline otsikoille)-->
+                <td>to-pe</td><td> 9-14</td> <!--table data eli sisältö tekstiä (th on taas table headline otsikoille)-->
               </tr>
-              <table>
+            </table>
+            <table></e>
               <tr>
-                <br>Tapaamisia voidaan sopia myös joustavasti! 
+                <td>Tapaamisia voidaan sopia myös joustavasti!</td>
                 </tr>
            </table>
            <table>
