--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
     <link rel="stylesheet" href="soteria.css">
 </head>
 <body >
-    <header id="etusivu">
-    <nav>
+    <header id="soteria">
+        <nav>
+        <ul class="valikko">
         <a href="index.html" id="valittu" >Etusivu</a>
         <a href="palvelut.html" >Palvelut</a>
         <a href="yhteystiedot.html" >Yhteystiedot</a>
     </nav>
      <!--valilehdet palveluihin sekä yhteystietoihin-->
+    
     <h1 id="slogan">Naiset matkassa turvallisin mielin</h1>
-    <a href="yhteistiedot.html" class="toimintakehote">Kuule lisää!</a>
+    <a href="yhteystiedot.html" class="toimintakehote">Tule mukaan!</a>
     </header>
 
+    
 <div class="sisalto">
      <p class="esittely">Oletko väsynyt odottamaan muiden aikatauluja lähtiessäsi matkalle, mutta sinua pelottaa myös lähteä yksin? </p>
-        <p> Naiset matkassa auttaa sinua tuntemaan olosi turvalliseksi myös yksin tarjoamalla tukea sekä turvaa matkallasi!</p> <!--kerrotaan esittely kyseisestä palvelusta. A hook.-->
-</div>
-<div class="grid-teksti">
+        <p>Soteria tarjoaa luotettavan matkakumppanin vaikka matkustaisitkin yksin. Sovelluksemme avulla pysyt turvassa ja saat aina yhteyden meihin. Tarjoamme vinkkejä ja arvokasta apua matkasi kaikissa vaiheissa. Ole rohkeasti yhteydessä niin suunnitellaan juuri sinun unelmiesi matka!</p> <!--kerrotaan esittely kyseisestä palvelusta. A hook.-->
 
  <h2>Turvallisempaa ympäristöä yksin matkustaville naisille</h2>
  <p> Yhteistyömme avulla pystyt kommunikoimaan muiden yksinmatkustavien kanssa sekä verkostoitumaan.</p>
@@ -32,14 +33,15 @@
  <p>Ei hätää! Olemme mukanasi koko matkan halutessanne</p>
 
  <h3>Yhteistyömme</h3>
- <p> Tärkeänä yhteistyön lähteenämme toimii kodgjohs hiudhid
+ <p> Tärkenä yhteistyön lähteenämme toimii kodgjohs hiudhid
     jjdohhgff ks. oishfffjfg
     nsjkjgd ijsgj osuyef jg od skkdg. jsjksbmdg.</p>
 </div>
 
 <div class="grid-kuva">
 <figure>
-    <img class="indexkuva" src="./kuvat/pictureforindexx.jpeg" alt="Kuva rannasta, jonka vedessä uiskentelee kilpikonnia">
+    <img class="indexkuva" src="./kuvat/pictureforindexx.jpeg" alt="Kuva rannasta, jonka vedessä uiskentelee kilpikonnia" 
+    align: center;>
   <!-- kuva, jossa kerrotaan alt tekstin avulla sisältöä-->
 </figure>
 </div>
