--- a/palvelut.html
+++ b/palvelut.html
@@ -8,22 +8,23 @@
     <title>Elämäsi matkalle turvallisesti</title>
     <link rel="stylesheet" href="soteria.css">
 </head>
-<body id="alisivut">
-    <div class="header">
+<body>
+    <header id="soteria">
         <nav>
-            <a href="index.html">Etusivu </a>
-            <a href="palvelut.html" id="valittu">Palvelut</a>
-            <a href="yhteystiedot.html">Yhteystiedot</a>
+            <ul class="valikko">
+                <li><a href="index.html" id="valittu">Etusivu</a></li>
+                <li><a href="palvelut.html">Palvelut</a></li>
+                <li><a href="yhteystiedot.html">Yhteystiedot</a></li>
+            </ul>
         </nav>
-    </div>
 
-    <div class="sisalto">
         <h1>Unohtumaton matkasi alkaa tästä</h1>
         <a href="yhteystiedot.html" class="toimintakehote">Olemme apunasi</a>
+    </header>
+    
+    <div class="footer">
 
     </div>
-    
-    <div class="footer"
 
 </body>
 </html>
