--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 </head>
 <body >
     <header id="soteria">
-        <nav>
-        <ul class="valikko">
+        <nav class="logo">
+            <a href="index.html"><img src="kuvat/logo.png"></a>
+
+        </nav>
+    <nav class="valikko">
         <a href="index.html" id="valittu" >Etusivu</a>
         <a href="palvelut.html" >Palvelut</a>
         <a href="yhteystiedot.html" >Yhteystiedot</a>
     </nav>
-     <!--valilehdet palveluihin sekä yhteystietoihin-->
+     <!--vlilehdet palveluihin sekä yhteystietoihin-->
     
     <h1 id="slogan">Naiset matkassa turvallisin mielin</h1>
     <a href="yhteystiedot.html" class="toimintakehote">Tule mukaan!</a>
