--- a/palvelut.html
+++ b/palvelut.html
@@ -11,11 +11,12 @@
 <body>
     <header id="soteria">
         <nav>
-            <ul class="valikko">
-                <li><a href="index.html" id="valittu">Etusivu</a></li>
-                <li><a href="palvelut.html">Palvelut</a></li>
-                <li><a href="yhteystiedot.html">Yhteystiedot</a></li>
-            </ul>
+        <a href="index.html"><img src="kuvat/logo.png"></a>
+        </nav>
+        <nav class="valikko">
+                <a href="index.html">Etusivu</a>
+                <a href="palvelut.html" id="valittu">Palvelut</a>
+                <a href="yhteystiedot.html">Yhteystiedot</a>
         </nav>
 
         <h1>Unohtumaton matkasi alkaa tästä</h1>
