--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -11,11 +11,12 @@
 <body>
     <header id = "soteria">
       <nav>
-         <ul class="valikko">
-            <li><a href="index.html" id="valittu">Etusivu</a></li>
-            <li><a href="palvelut.html">Palvelut</a></li>
-            <li><a href="yhteystiedot.html">Yhteystiedot</a></li>
-         </ul>
+         <a href="index.html"><img src="kuvat/logo.png"></a>
+      </nav>
+      <nav class="valikko">
+            <li><a href="index.html">Etusivu</a>
+            <li><a href="palvelut.html">Palvelut</a>
+            <li><a href="yhteystiedot.html" id="valittu">Yhteystiedot</a>
       </nav>
       <h1>Ei huolta. Olemme apunasi.</h1>
       <a href="palvelut.html" class="toimintakehote"> Löydä elämäsi reissu!</a>
