--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
     <link rel="stylesheet" href="soteria.css">
 </head>
 <body >
-    <header id="soteria">
+    <header>
+     <div class="soteria">
+
         <nav class="logo">
             <a href="index.html"><img src="kuvat/logo.png"></a>
 
         </nav>
-    <nav class="valikko">
+      <nav class="valikko">
         <a href="index.html" id="valittu" >Etusivu</a>
         <a href="palvelut.html" >Palvelut</a>
         <a href="yhteystiedot.html" >Yhteystiedot</a>
-    </nav>
-     <!--vlilehdet palveluihin sekä yhteystietoihin-->
+      </nav>
+      <!--vlilehdet palveluihin sekä yhteystietoihin-->
     
-    <h1 id="slogan">Naiset matkassa turvallisin mielin</h1>
-    <a href="yhteystiedot.html" class="toimintakehote">Tule mukaan!</a>
-    </header>
-
+      <h1 id="slogan">Naiset matkassa turvallisin mielin</h1>
+      <a href="yhteystiedot.html" class="toimintakehote">Tule mukaan!</a>
+      </div>
+     </header>
     
 <div class="sisalto">
      <p class="esittely">Oletko väsynyt odottamaan muiden aikatauluja lähtiessäsi matkalle, mutta sinua pelottaa myös lähteä yksin? </p>
@@ -39,19 +41,16 @@
  <p> Tärkenä yhteistyön lähteenämme toimii kodgjohs hiudhid
     jjdohhgff ks. oishfffjfg
     nsjkjgd ijsgj osuyef jg od skkdg. jsjksbmdg.</p>
-</div>
 
-<div class="grid-kuva">
-<figure>
-    <img class="indexkuva" src="./kuvat/pictureforindexx.jpeg" alt="Kuva rannasta, jonka vedessä uiskentelee kilpikonnia" 
-    align: center;>
-  <!-- kuva, jossa kerrotaan alt tekstin avulla sisältöä-->
-</figure>
-</div>
-<div class="grid-teksti2">
- <h2>Kuin olisit kotonasi</h2>
-    <p> Turvallista oloa sekä yhteishenkeä jksdi idgikd. jidijsghs </p>
-    <p> jgddjksk skd kkd ok jsgj ksks dfshyue jsfbjoa osin sbdh.</p>
+   <figure>
+    <img class="indexkuva" src="./kuvat/pictureforindexx.jpeg" alt="Kuva rannasta, jonka vedessä uiskentelee kilpikonnia">
+      <!-- kuva, jossa kerrotaan alt tekstin avulla sisältöä-->
+    </figure> 
+    <div class="grid-teksti2">
+        <h2>Kuin olisit kotonasi</h2>
+           <p> Turvallista oloa sekä yhteishenkeä jksdi idgikd. jidijsghs </p>
+           <p> jgddjksk skd kkd ok jsgj ksks dfshyue jsfbjoa osin sbdh.</p>
+       </div>
 </div>
 
 <footer>
