--- a/index.html
+++ b/index.html
@@ -46,12 +46,16 @@
     <img class="indexkuva" src="./kuvat/pictureforindexx.jpeg" alt="Kuva rannasta, jonka vedessä uiskentelee kilpikonnia">
       <!-- kuva, jossa kerrotaan alt tekstin avulla sisältöä-->
     </figure> 
-    <div class="grid-teksti2">
+
         <h2>Kuin olisit kotonasi</h2>
-           <p> Turvallista oloa sekä yhteishenkeä jksdi idgikd. jidijsghs </p>
-           <p> jgddjksk skd kkd ok jsgj ksks dfshyue jsfbjoa osin sbdh.</p>
-       </div>
-</div>
+           <p> Turvallista oloa sekä yhteishenkeä jksdi idgikd. jidijsghs
+            ikddjkdkj kjdjk. H lisjilshkk hshsfjd jsjs. </p>
+           <p> jgddjksk skd kkd ok jsgj ksks dfshyue jsfbjoa osin sbdh.
+            kdj. Kuule oma äänesi meidän avullamme. jkshus dhuua fhs gjih.
+            kdsjgsjk sjlgj il hkjskf h.</p> 
+           <p> djkdjkdh. sjoigjis njdkjs hsdjd jshf jds fndndf. 
+           </p>
+           
 
 <footer>
         <div class="icons">  <!--Src luo kuvan linkille-->
