--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <div class="soteria">
 
         <nav class="logo">
-            <a href="index.html"><img src="kuvat/logo.png"></a>
+            <a href="index.html"><img src="kuvat/logo.png" alt=" yrityksen logo, jossa on nainen,maapallo sekä lentokone"></a>
 
         </nav>
       <nav class="valikko">
@@ -29,7 +29,7 @@
      </header>
     
 <div class="sisalto">
-     <p class="esittely">Oletko väsynyt odottamaan muiden aikatauluja lähtiessäsi matkalle, mutta sinua pelottaa myös lähteä yksin? </p>
+     <p>Oletko väsynyt odottamaan muiden aikatauluja lähtiessäsi matkalle, mutta sinua pelottaa myös lähteä yksin? </p>
         <p>Soteria tarjoaa luotettavan matkakumppanin vaikka matkustaisitkin yksin. Sovelluksemme avulla pysyt turvassa ja saat aina yhteyden meihin. Tarjoamme vinkkejä ja arvokasta apua matkasi kaikissa vaiheissa. Ole rohkeasti yhteydessä niin suunnitellaan juuri sinun unelmiesi matka!</p> <!--kerrotaan esittely kyseisestä palvelusta. A hook.-->
 
  <h2>Turvallisempaa ympäristöä yksin matkustaville naisille</h2>
@@ -56,17 +56,17 @@
            <p> djkdjkdh. sjoigjis njdkjs hsdjd jshf jds fndndf. 
            </p>
            
-
+         </div>
 <footer>
-        <div class="icons">  <!--Src luo kuvan linkille-->
+        <div>  <!--Src luo kuvan linkille-->
         <a href = "https://www.facebook.com/">
-            <img src="./someicons/facebook.png" height="35px" width="35px">
+            <img class="icons" src="./someicons/facebook.png" alt="facebook icon">
          </a>
          <a href="https://www.instagram.com/">
-            <img src ="someicons/instagram.png"height="35px" width="35px">
+            <img class="icons" src ="./someicons/instagram.png" alt="instagram icon">
          </a>
          <a href="https://www.tiktok.com/">
-            <img src ="./someicons/tiktok.png"height="35px" width="35px">
+            <img class="icons" src ="./someicons/tiktok.png" alt=" tiktok icon">
          </a>
     </div>
      <div>
@@ -76,6 +76,5 @@
         <p><a href="mailto:info@soteria.fi">info@soteria.fi</a></p>
      </div>
 </footer>
-
 </body>
 </html>
