--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -10,19 +10,20 @@
 </head>
 <body>
     <header id = "soteria">
-      <nav>
-         <a href="index.html"><img src="kuvat/logo.png"></a>
-      </nav>
+
       <nav class="valikko">
             <li><a href="index.html">Etusivu</a>
             <li><a href="palvelut.html">Palvelut</a>
             <li><a href="yhteystiedot.html" id="valittu">Yhteystiedot</a>
       </nav>
+      <nav class="logo">
+         <a href="index.html"><img src="kuvat/logo.png" alt= "teksti Soteria, nainen silmät kiinni maapallo taustalla"></a>
+         </nav>
       <h1>Ei huolta. Olemme apunasi.</h1>
       <a href="palvelut.html" class="toimintakehote"> Löydä elämäsi reissu!</a>
     </header>
 
-<div class="alisivu-sisalto">   
+<div class="sisalto">   
         <div style="overflow-x: auto" class="esittely"> <!--Liikkuva bar, jos teksti ei mahdo kokonaan näytölle-->
            <table>
             <div>
@@ -41,46 +42,30 @@
             </table>
             <table></e>
               <tr>
-                <td>Tapaamisia voidaan sopia myös joustavasti!</td>
 
-                <br>  Tapaamisia voidaan sopia myös joustavasti! 
+                <br>
                 <br>  Saat meihin yhteyden myös Tiktokin, Facebookin sekä Instagramin kautta.
                 </tr>
-           
-           </table>
-           <table>
-              <tr>
-                 <th>Aukioloaikoina</th>
-              </tr>
-              <tr>
-                 <td>puh: 0300-782343 </td>
-              </tr>
-              <tr>
-                 <td><a href="mailto:info@soteria.fi">info@soteria.fi</a>
-              </tr>
-              <tr>
-                 <td>&nbsp;</td>
-              </tr>
-              <tr>
-                 <td>Kaasutehtaankatu 20, 00540 Helsinki</td>
-              </tr>
-
-     <h2 id="h2yht">Matkassasi mukana</h2>
-     <figure>
-      <img class="kuva" src="./kuvat/Kuva3.png" alt="Picture of a staff member">
+      <figure>
+         <br>
+         <br>
+         <br>
+      
+         <h2 id="h2yht">Matkassasi mukana</h2>
+      <img class="kuva" src="./kuvat/Kuva3.png" alt="vanhempi lyhyttukkainen hymyilevä nainen vaaleassa villatakissa">
       <p>CEO, Maria Kuutila</p>
       <p> Puh.: 0300-9480</p>
       <p>S-posti: mariakuutila@gmail.com</p>
    </figure>
    <figure>
-      <img class="kuva" src="./kuvat/Kuva1.png" alt="Picture of a staff member">
+      <img class="kuva" src="./kuvat/Kuva1.png" alt="hymyilevä nainen huivi päässä">
       <p>COC, Helly Viima</p>
       <p>Puh. : 0300-8623</p>
       <p>s-posti:hellyviima@gmail.com</p>
    </figure>
   
    <figure>
-      <img class="kuva" src="./kuvat/Kuva2.png" alt="Picture of a staff member">
+      <img class="kuva" src="./kuvat/Kuva2.png" alt="nuori nainen raitapaidassa, joka hymyilee">
       <p>Matkaopas, Liisa Kuutila</p>
       <p>Puh. : 0300-3458</p>
       <p>s-posti:liisakuutila@gmail.com</p>
