--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -11,7 +11,7 @@
 <body>
     <header id = "soteria">
       <image class="logo">
-         <a href="index.html"><img src="kuvat/logo.png"></a>
+         <a href="index.html"><img src="kuvat/logo.png"alt=" Soterian logo"></a>
 
       <nav class="valikko">
             <a href="index.html">Etusivu</a>
