--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -65,7 +65,7 @@
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td>Kaasutehtaan 20, 00540 Helsinki</td>
+                    <td>Kaasutehtaankatu 20, 00540 Helsinki</td>
                 </tr>
             </table>
         </div>
